--- a/Server/.env
+++ b/Server/.env
@@ -3,3 +3,11 @@ SESS_SECRET = 5671hstbdgG35Hjk6shgfBU864Hqli9
 DB_NAME = teszt-tdk
 DB_USERNAME = root
 DB_PASSWORD = 
+
+BASE_URL =  http://localhost:3000/
+
+EMAIL_HOST = smtp.gmail.com
+EMAIL_SERVICE = gmail
+EMAIL_PORT = 587
+EMAIL_USER = teszttdk@gmail.com
+EMAIL_PASSWORD = ylylegewuajxdasr
