--- a/Server/package.json
+++ b/Server/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js ",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --detectOpenHandles --forceExit test/app.test.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,13 +17,18 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "jest": "^29.7.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.1.0",
     "nodemailer": "^6.9.13",
     "path": "^0.12.7",
-    "sequelize": "^6.28.0"
+    "sequelize": "^6.28.0",
+    "supertest": "^7.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "babel-jest": "^29.7.0",
     "nodemon": "^2.0.20"
   }
 }
